# isaac

bench/: blas.cpp
examples/: CMakeLists.txt  indexing.cpp
include/isaac/: array.h  common.h  exceptions.h  expression.h  scalar.h  tuple.h  types.h  value_scalar.h
include/isaac/driver/: backend.h  buffer.h  command_queue.h  common.h  context.h  device.h  event.h  exceptions.h  handle.h  kernel.h  ndrange.h  platform.h  program.h  program_cache.h
include/isaac/exception/: api.h  driver.h
include/isaac/jit/: compile.h  exceptions.h
include/isaac/kernels/: parse.h  symbolic_object.h
include/isaac/profiles/: profiles.h
include/isaac/runtime/: backend.h  exceptions.h  execute.h  instruction.h  launcher.h
include/isaac/symbolic/: execute.h  expression.h
include/isaac/templates/: base.h  elementwise_1d.h  elementwise_2d.h  matrix_product.h  reduce_1d.h  reduce_2d.h
lib/: array.cpp  common.cpp  exceptions.cpp  expression.cpp  scalar.cpp  value_scalar.cpp
lib/api/blas/: clBLAS.cpp  cublas.cpp
lib/driver/: backend.cpp  buffer.cpp  command_queue.cpp  context.cpp  device.cpp  event.cpp  exceptions.cpp  handle.cpp  kernel.cpp  platform.cpp  program.cpp
lib/exception/: api.cpp  unknown_datatype.cpp
lib/jit/: exceptions.cpp
lib/jit/generation/: base.cpp  elementwise_1d.cpp  elementwise_2d.cpp  matrix_product.cpp  reduce_1d.cpp  reduce_2d.cpp
lib/kernels/: parse.cpp  stream.cpp  symbolic_object.cpp
lib/kernels/parse/: extract.hpp  filter.hpp  hash.hpp  set_arguments.hpp  symbolize.hpp  traverse.hpp
lib/kernels/templates/: base.cpp  elementwise_1d.cpp  elementwise_2d.cpp  keywords.cpp  matrix_product.cpp  reduce_1d.cpp  (+2 more)
lib/profiles/: database.cpp  profiles.cpp
lib/runtime/: backend.cpp  exceptions.cpp  execute.cpp  instruction.cpp
lib/scheduling/: heft.cpp
lib/symbolic/: execute.cpp  expression.cpp  io.cpp  preset.cpp
lib/templates/: base.cpp  elementwise_1d.cpp  elementwise_2d.cpp  matrix_product.cpp  reduce_1d.cpp  reduce_2d.cpp
lib/wrap/: clBLAS.cpp  cublas.cpp
python/: setup.py
tests/: CMakeLists.txt  common.hpp
tests/api/: blas-1.cpp  blas-2.cpp  blas-3.cpp
tests/api/blas/: blas-1.cpp  blas-2.cpp  blas-3.cpp
tests/api/cpp/: element-1d.cpp  element-2d.cpp  reduce-1d.cpp  reduce-2d.cpp
tests/compiler/: element-1d.cpp  element-2d.cpp  matrix-multiply.cpp  reduce-1d.cpp  reduce-2d.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/operations/: element-wise-1d.cpp  reduce-2d.cpp
tests/runtime/: fusion.cpp
tests/runtime/segmentation/: temporaries.cpp
(+68 files in other folders)
